@@ -4,6 +4,7 @@
 
 #include <string.h>
 #include <math.h>
+#include <sys/time.h>
 
 #include <Evil.h>
 
